# marqu

./: .gitignore  README.md  generate_repomix.sh  install.sh  uninstall.sh
archive/: ListParticleSimulator.cpp
cpp/: CMakeLists.txt  uninstall.cmake
cpp/archive/: ListParticleSimulator.h  VectorParticleSimulator.cpp
cpp/include/: BaseParticleSimulator.h  BaseStateSampler.h  BellPairStateSampler.h  ClassicalParticleSimulator.h  Configuration.h  Hamiltonian.h  Histogram.h  Model.h  Observables.h  Particle.h  ProductStateSampler.h  Runner.h  TreapParticleSimulator.h  VectorParticleSimulator.h  utils.h
cpp/src/: BaseParticleSimulator.cpp  BellPairStateSampler.cpp  ClassicalParticleSimulator.cpp  Configuration.cpp  Model.cpp  Observables.cpp  Particle.cpp  ProductStateSampler.cpp  Runner.cpp  TreapParticleSimulator.cpp  histogram.cpp  utils.cpp
diagram/: diagram.pu  puml-theme-mytheme.puml
examples/: .gitignore  Makefile  generate_pairs.py  main.cpp  model.py  run.sh  test.txt  tfim.cpp  tfim.h  tfim.py
include/: BaseParticleSimulator.h  Configuration.h  Model.h  Observables.h  VectorParticleSimulator.h  utils.h
python/: pyproject.toml
python/archive/: rate_matrix_terms.py
python/marqu/: gauge_optimizer.py  gauge_transform.py  operators.py  projector.py  rate_matrix.py  rate_matrix_terms.py  utils.py
python/marqu/model_generator/: model.py
src/: Configuration.cpp  Particle.cpp  TreapParticleSimulator.cpp  utils.cpp
