[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marqu"
version = "0.0.1"
authors = [
{ name="Hugo Lóio"},
]

description = "A library for simulating the Schrödinger equation of spin chains based on a classical stochastic interpretation as a continuous-time Markov chain."
#readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy",
  "scipy"
]

[project.urls]
Homepage = "https://github.com/Hugo-loio/marqu"
Issues = "https://github.com/Hugo-loio/marqu/issues"
